# robomaster_s1_gazebo

./: CMakeLists.txt  README.md  package.xml
launch/: s1_gazebo.launch.py  s1_navigation_gazebo.launch.py  s1_teleop_keyboard.launch.py
scripts/: cleanup_gazebo.sh  mecanum_teleop_keyboard.py
scripts/dev/: test_mecanum_control.py  verify_mecanum.sh
urdf/: robomaster_s1_with_lidar.urdf.xacro
worlds/: iscas_museum.world
